--- a/package.json
+++ b/package.json
@@ -51,10 +51,16 @@
     }
   },
   "dependencies": {
+    "file-type": "^11.0.0",
+    "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
+    "musicmetadata": "^2.0.5",
+    "read-chunk": "^3.2.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0",
+    "vuex-electron": "^1.0.3"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
