--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
     "musicmetadata": "^2.0.5",
+    "python-shell": "^1.0.7",
     "read-chunk": "^3.2.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
