--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
-    "vuex-electron": "^1.0.3"
+    "vuex-electron": "^1.0.3",
+    "zeromq": "^5.1.0"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
