--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "musicmetadata": "^2.0.5",
     "python-shell": "^1.0.7",
     "read-chunk": "^3.2.0",
+    "socket.io": "^2.2.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
-    "vuex-electron": "^1.0.3"
+    "vuex-electron": "^1.0.3",
+    "zerorpc": "^0.9.8"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
