--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
     "vuex-electron": "^1.0.3",
-    "zerorpc": "^0.9.8"
+    "zeromq": "^5.1.0"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
@@ -81,5 +81,8 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
-  }
+  }, 
+  "engines" : { 
+    "node" : "11.9.0" 
+  } 
 }
