--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     }
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "file-type": "^11.0.0",
     "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
@@ -81,8 +82,8 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
-  }, 
-  "engines" : { 
-    "node" : "11.9.0" 
-  } 
+  },
+  "engines": {
+    "node": "11.9.0"
+  }
 }
